# orbit-fit

./: .project  CMakeLists.txt  ignorelist.txt
CMakeModules/: FindMULTINEST.cmake
lib/: CMakeLists.txt
lib/multinest/: CMakeLists.txt  Makefile  eggbox.cmd  fort.55  multinest.h
lib/multinest/chains/: 2-.txt  2-live.points  2-phys_live.points  2-summary.txt  eggboxC-.txt  eggboxC-live.points  eggboxC-phys_live.points  eggboxC-summary.txt  himmelblau-.txt  himmelblau-live.points  himmelblau-phys_live.points  himmelblau-summary.txt  rosenbrock-.txt  rosenbrock-live.points  rosenbrock-phys_live.points  rosenbrock-summary.txt
lib/multinest/example_ackley/: Makefile
lib/multinest/example_eggbox_C/: Makefile
lib/multinest/example_eggbox_C++/: Makefile  eggbox.cc
lib/multinest/example_gauss_shell/: Makefile
lib/multinest/example_gaussian/: Makefile
lib/multinest/example_himmelblau/: Makefile
lib/multinest/example_obj_detect/: Makefile
lib/multinest/example_rosenbrock/: Makefile
lib/orbital_motion/: CMakeLists.txt  orbit.cpp  orbit.h
lib/textio/: ReadTextFile.h
scripts/: submit_fitast.cmd  submit_fitboth.cmd  submit_fitrv.cmd
src/: CMakeLists.txt  common.cpp  common.h  constants.h  fitast.cpp  fitast.h  fitast_common.cpp  fitast_common.h  fitboth.cpp  fitboth.h  fitrv.cpp  fitrv.h  fitrv_common.cpp  fitrv_common.h  genplotdata.cpp  genplotdata.h  multinest_inf.cpp  multinest_inf.h  read_data.cpp  read_data.h
src/fit_astrometry/: main.cpp  main.h
src/fit_rv/: main.cpp  main.h
src/gen_data/: main.cpp
test_data/: epsAur_ast_PPMX-normal.txt  epsAur_ast_PPMX-refit-plateave.txt  epsAur_ast_PPMX-refit-yearave.txt  epsAur_ast_PPMX-refit.txt  epsAur_ast_VdK.txt  epsAur_ast_normal-pm.txt  epsAur_ast_ppmx-normal-epochave.txt  epsAur_ast_ppmx-normal-plateave.txt  epsAur_ast_ppmx-normal-yearave.txt  epsAur_ast_ppmx-normal.txt  epsAur_ast_ppmx-refit-epochave.txt  epsAur_ast_ppmx-refit-plateave.txt  epsAur_ast_ppmx-refit-yearave.txt  epsAur_ast_ppmx-refit.txt  epsAur_ast_refit-pm.txt  epsAur_ast_tycho2-normal-epochave.txt  epsAur_ast_tycho2-normal-plateave.txt  epsAur_ast_tycho2-normal-yearave.txt  epsAur_ast_tycho2-normal.txt  epsAur_ast_tycho2-refit-epochave.txt  epsAur_ast_tycho2-refit-plateave.txt  epsAur_ast_tycho2-refit-yearave.txt  epsAur_ast_tycho2-refit.txt  epsAur_rv_noeclipse.txt
